--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
 
 	 </div>
 
-	 <p><i>The Gleaners and I, a film by Agnès Varda</i>,<a href="gleaners.html" class="one" target="_blank" >*</a> book design, 176 pages, 9.91 × 13.72 cm, April, 2020. <a href="https://lihuayu.xyz/filmscript/" class="one" target="_blank" >Download PDF</a>
+	 <p class="text"><i>The Gleaners and I, a film by Agnès Varda</i>,<a href="gleaners.html" class="one" target="_blank" >*</a> book design, 176 pages, 9.91 × 13.72 cm, April, 2020. <a href="https://lihuayu.xyz/filmscript/" class="one" target="_blank" >Download PDF</a>
 	 <br/> “The process of making films in communion with oneself, the way a painter works or a writer, need not now be solely experimental. Contrary to what people say, using the first-person in film tends to be a sign of humility: ‘All I have to ofter is myself’ ” ——Chris Marker, 1997
 	</p>
 
-	  <br/>
 
 
 		<div class="slideshow-container">
@@ -60,13 +59,10 @@
 
 		</div>
 
-	<p><i>Little Birds Don’t Know They Live in a Technological Age</i><a href="bird.html" class="one" target="_blank" >*</a>, 6 min 8 sec, single chanel video, February, 2020. <a href="https://vimeo.com/403701009" class="one" target="_blank" >Watch Full Video</a>
-
-
+	<p class="text"><i>Little Birds Don’t Know They Live in a Technological Age</i><a href="bird.html" class="one" target="_blank" >*</a>, 6 min 8 sec, single chanel video, February, 2020. <a href="https://vimeo.com/403701009" class="one" target="_blank" >Watch Full Video</a>
 
 	 </p>
 
-		<br/>
 
 
 		<div class="slideshow-container">
@@ -87,12 +83,10 @@
 		</div>
 
 		</div>
-		<p>Booklet design along with <i>R.v.J.G</i>, risograph, 13.97 × 21.59 cm, October, 2019.
+		<p class="text">Booklet design along with <i>R.v.J.G</i>, risograph, 13.97 × 21.59 cm, October, 2019.
 			<br/>
 			After five days I arrived in the city, I went to a book store and found a postcard with Rembrandt’s self-portrait. I took it home and pasted it up on my desk wall<a href="Rembrandt.html" class="one" target="_blank" >*</a>. I often look up at him, while He is also frowning at me.
 </p>
-
-		<br/>
 
 
 
@@ -157,7 +151,7 @@
 
 		</div>
 
-		<p><i>R.v.J.G</i>, book design, laser printing, 238 pages, 12.2 × 19 cm, October, 2019.
+		<p class="text"><i>R.v.J.G</i>, book design, laser printing, 238 pages, 12.2 × 19 cm, October, 2019.
 			<br/>
 		“A fierce generosity. I employ these words to get right to the heart of the matter. Rembrandt’s last self-portrait seems to say this: “I will be of such complicity that even savage animals will know my benevolence.” This ethic is not just a vain attempt to spruce up his soul; his work requires it, or rather brings it about. We know this because for perhaps the first time in the history of art, a painter posing before a mirror with an almost narcissistic self-satisfaction, has left us, parallel to his other work, a series of self-portraits in which we can trace the evolution of his method and the action of this evolution upon man. Is that it, or is it the opposite?” (Jean Genet, <i>Rembrandt's Secret</i>, 1959)</p>
 
@@ -188,9 +182,8 @@
 
 		</div>
 
-		<p><i>Homecoming Party</i>, visual identity, inject printing, 8.4 × 13.95 cm, November, 2019. </p>
+		<p class="text"><i>Homecoming Party</i>, visual identity, inject printing, 8.4 × 13.95 cm, November, 2019. </p>
 
-		<br/>
 
 		<div class="slideshow-container">
 			<div class="mySlides10">
@@ -210,9 +203,7 @@
 
 		</div>
 
-		<p><i>Heart’s Knot( 心结 )</i>, flip book, laser printing, 4 × 5.09 cm / 7.2 × 9.17 cm, October, 2019.</p>
-
-		<br/>
+		<p class="text"><i>Heart’s Knot( 心结 )</i>, flip book, laser printing, 4 × 5.09 cm / 7.2 × 9.17 cm, October, 2019.</p>
 
 
 <div class="slideshow-container">
@@ -263,12 +254,11 @@
 </div>
 </div>
 
-<p><i>The Window</i>, book design, laser printing, 22 × 29 cm, December, 2019.
+<p class="text"><i>The Window</i>, book design, laser printing, 22 × 29 cm, December, 2019.
 </br>
 When I went to the pump house for the first time, the leaves by the window<a href="window.html" class="one" target="_blank" >*</a> had not fallen out. It reminded me of the book <i>To the Lighthouse</i> written by Virginia Woolf. In the novel, the window can be a metaphor, connecting through yesterday and tomorrow, reality and illusion, clearness and vagueness, sense and sensibility, beauty and sublime.
 </p>
 
-<br/>
 
 <div class="slideshow-container">
 	<div class="mySlides9">
@@ -302,9 +292,7 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 </div>
 </div>
 
-<p><a href="https://simplelivin.faith/" class="one" target="_blank" ><i>Simple Livin’</i></a>, visual identiy for a group show, collaborated with Aidan Quinlan, December, 2019.</p>
-
-<br/>
+<p class="text"><a href="https://simplelivin.faith/" class="one" target="_blank" ><i>Simple Livin’</i></a>, visual identiy for a group show, collaborated with Aidan Quinlan, December, 2019.</p>
 
 
 <div class="slideshow-container">
@@ -330,11 +318,9 @@ When I went to the pump house for the first time, the leaves by the window<a hre
  </div>
 	 </div>
 
-	 <p>Visual identity for O+M lecture, poster: 91.44 × 121.92 cm, inject printing / flyer: 6.27 8.79 cm, risograph, November, 2019.
+	 <p class="text">Visual identity for O+M lecture, poster: 91.44 × 121.92 cm, inject printing / flyer: 6.27 8.79 cm, risograph, November, 2019.
 
    </p>
-
-	 <br/>
 
 
 <div class="slideshow-container">
@@ -375,15 +361,10 @@ When I went to the pump house for the first time, the leaves by the window<a hre
  </div>
 	 </div>
 
-	 <p>Visual identity for O+M lecture, vinyl on paperboard, key chain, dimension variable, February, 2020.
+	 <p class="text">Visual identity for O+M lecture, vinyl on paperboard, key chain, dimension variable, February, 2020.
 	 </br>
 	 Along with the main posters, I also made riso-printed flyers and a promotional video<a href="blue.html" class="one" target="_blank" >*</a>.
    </p>
-
-	 <br/>
-
-
-
 
 
 
@@ -398,7 +379,7 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 	 	<a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
 	</div>
 	 </div>
-	 <p><i>Birthday Gift to Qinqin</i>, <a href="https://yuqingwang-0.github.io/yuqinww/" target="_blank">website</a>, January, 2020.
+	 <p class="text"><i>Birthday Gift to Qinqin</i>, <a href="https://yuqingwang-0.github.io/yuqinww/" target="_blank">website</a>, January, 2020.
 	 <br/>This is a friendship website for Qinqin. One day she sent me a photo of three ducks on her way to school, I really like it and decided to use this for the idea of the website. Qinqin and I have been best friends since the first year of high school. She’s now studying Bioinformatics in The University of Edinburgh in Scotland. It’s very interesting that we both live in a place called Richmond<a href="richmond.html" class="one" target="_blank" >*</a>, even though in different countries.
  </p>
 
@@ -436,7 +417,7 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 	 	</div>
 	</div>
 
-	 	<p>Some poster designs, 2020.
+	 	<p class="text">Some poster designs, 2020.
 		</br>(a) Beethoven’s <i>Moonlight Sonata</i>. (b) I imagined Snape holding a magic wand. (c) Spring came, the blooming daffodils impressed me everyday when I was passing by. (d) I used my phone camera to record the waves in the <i>Prénom Carmen</i><a href="PrénomCarmen.html" class="one" target="_blank" >*</a>(1983) by Jean-Luc Godard.
 
 		</p>
@@ -490,8 +471,9 @@ function showSlides(n, no) {
 
 <div class="info">
 
-	<div class="text">
+	<div class="text-1">
 		This website serves as the MFA Candidacy Proposal for Lihua Yu, including <a href="index.html" class="one" target="_blank" >selected projects</a> she had done in the first year of the program, a <a href="img/map.pdf" class="one" target="_blank" >PDF</a> of her writing, and an<a href="img/map.pdf" class="one" target="_blank" > unfinished map</a>. There are some <a href="img/map.pdf" class="one" target="_blank" >*</a> in the caption, you can click to know more about the story behind the works, but it’s ok if you missed it.
+	</div>
 
 
 
