--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		</div>
 		<p class="text">Booklet design along with <i>R.v.J.G</i>, risograph, 13.97 × 21.59 cm, October, 2019.
 			<br/>
-			After five days I arrived in the city, I went to a book store and found a postcard with Rembrandt’s self-portrait. I took it home and pasted it up on my desk wall<a href="Rembrandt.html" class="one" target="_blank" >*</a>. I often look up at him, while He is also frowning at me.
+			After five days I arrived in the city, I went to a book store and found a postcard with Rembrandt’s self-portrait. I took it home and pasted it up on my desk wall. I often look up at him, while He is also frowning at me<a href="Rembrandt.html" class="one" target="_blank" >*</a>.
 </p>
 
 
@@ -292,7 +292,7 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 </div>
 </div>
 
-<p class="text"><a href="https://simplelivin.faith/" class="one" target="_blank" ><i>Simple Livin’</i></a>, visual identiy for a group show, collaborated with Aidan Quinlan, December, 2019.</p>
+<p class="text"><a href="https://simplelivin.faith/" class="one" target="_blank" ><i>Simple Livin’</i></a>, group show website, collaborated with Aidan Quinlan, December, 2019.</p>
 
 
 <div class="slideshow-container">
@@ -363,7 +363,7 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 
 	 <p class="text">Visual identity for O+M lecture, vinyl on paperboard, key chain, dimension variable, February, 2020.
 	 </br>
-	 Along with the main posters, I also made riso-printed flyers and a promotional video<a href="blue.html" class="one" target="_blank" >*</a>.
+	 Along with the main posters, I also made riso-printed flyers and a promotional video<a href="video.html" class="one" target="_blank" >*</a>.
    </p>
 
 
@@ -418,7 +418,7 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 	</div>
 
 	 	<p class="text">Some poster designs, 2020.
-		</br>(a) Beethoven’s <i>Moonlight Sonata</i>. (b) I imagined Snape holding a magic wand. (c) Spring came, the blooming daffodils impressed me everyday when I was passing by. (d) I used my phone camera to record the waves in the <i>Prénom Carmen</i><a href="PrénomCarmen.html" class="one" target="_blank" >*</a>(1983) by Jean-Luc Godard.
+		</br>(a) Beethoven’s <i>Moonlight Sonata</i>. (b) I imagined Snape holding a magic wand. (c) Spring came, the blooming daffodils are like choirs singing songs. (d) I used my phone camera to record the waves in <i>Prénom Carmen</i><a href="PrénomCarmen.html" class="one" target="_blank" >*</a>(1983) by Jean-Luc Godard.
 
 		</p>
 
@@ -472,7 +472,7 @@ function showSlides(n, no) {
 <div class="info">
 
 	<div class="text-1">
-		This website serves as the MFA Candidacy Proposal for Lihua Yu, including <a href="index.html" class="one" target="_blank" >selected projects</a> she had done in the first year of the program, a <a href="img/map.pdf" class="one" target="_blank" >PDF</a> of her writing, and an<a href="img/map.pdf" class="one" target="_blank" > unfinished map</a>. There are some <a href="img/map.pdf" class="one" target="_blank" >*</a> in the caption, you can click to know more about the story behind the works, but it’s ok if you missed it.
+		This website serves as the MFA Candidacy Proposal for Lihua Yu, including <a href="index.html" class="one" >selected projects</a> she had done in the first year of the program, a <a href="img/map.pdf" class="one" target="_blank" >PDF</a> of her writing, and an<a href="img/map.pdf" class="one" target="_blank" > unfinished map</a>. There are some <a href="img/map.pdf" class="one" target="_blank" >*</a> in the caption, you can click to know more about the story behind the works, but it’s ok if you missed it.
 	</div>
 
 
