--- a/index.html
+++ b/index.html
@@ -209,42 +209,42 @@
 <div class="slideshow-container">
 
   <div class="mySlides2">
-    <img src="img/window-cover-1.jpg" style="width:1050px">
+    <img src="img/window-cover-1.jpg" style="width:97%">
 		<div class="numbertext">1 / 8</div>
   </div>
 
 	<div class="mySlides2">
-    <img src="img/Scan 1.jpg" style="width:1050px">
+    <img src="img/Scan 1.jpg" style="width:97%">
 		<div class="numbertext">2 / 8</div>
   </div>
 
 	<div class="mySlides2">
-    <img src="img/Scan 14-1.jpg" style="width:1050px">
+    <img src="img/Scan 14-1.jpg" style="width:97%">
 		<div class="numbertext">3 / 8</div>
   </div>
 
   <div class="mySlides2">
-    <img src="img/Scan 19-1.jpg" style="width:1050px">
+    <img src="img/Scan 19-1.jpg" style="width:97%">
 		<div class="numbertext">4 / 8</div>
   </div>
 
   <div class="mySlides2">
-    <img src="img/Scan 19.jpg" style="width:1050px">
+    <img src="img/Scan 19.jpg" style="width:97%">
 		<div class="numbertext">5 / 8</div>
   </div>
 
 	<div class="mySlides2">
-		<img src="img/Scan 20-1.jpg" style="width:1050px">
+		<img src="img/Scan 20-1.jpg" style="width:97%">
 		<div class="numbertext">6 / 8</div>
 	</div>
 
 	<div class="mySlides2">
-    <img src="img/Scan 23-1.jpg" style="width:1050px">
+    <img src="img/Scan 23-1.jpg" style="width:97%">
 		<div class="numbertext">7 / 8</div>
   </div>
 
 	<div class="mySlides2">
-		<img src="img/installation.jpg" style="width:1050px">
+		<img src="img/installation.jpg" style="width:97%">
 		<div class="numbertext">8 / 8  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Installation View</div>
 	</div>
 
