--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	 </div>
 
-	 <p class="text"><i>The Gleaners and I, a film by Agnès Varda</i>,<a href="gleaners.html" class="one" target="_blank" >*</a> book design, 176 pages, 9.91 × 13.72 cm, April, 2020. <a href="https://lihuayu.xyz/filmscript/" class="one" target="_blank" >Download PDF</a>
+	 <p class="text"><i>The Gleaners and I, a film by Agnès Varda</i><a href="gleaners.html" class="one" target="_blank" >*</a>, book design, 176 pages, 9.91 × 13.72 cm, April, 2020. <a href="https://lihuayu.xyz/filmscript/" class="one" target="_blank" >Download PDF</a>
 	 <br/> “The process of making films in communion with oneself, the way a painter works or a writer, need not now be solely experimental. Contrary to what people say, using the first-person in film tends to be a sign of humility: ‘All I have to ofter is myself’ ” ——Chris Marker, 1997
 	</p>
 
