--- a/index.html
+++ b/index.html
@@ -418,12 +418,207 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 	</div>
 
 	 	<p class="text">Some poster designs, 2020.
-		</br>(a) Beethoven’s <i>Moonlight Sonata</i>. (b) I imagined Snape holding a magic wand. (c) Spring came, the blooming daffodils are like choirs singing songs. (d) I used my phone camera to record the waves in <i>Prénom Carmen</i><a href="PrénomCarmen.html" class="one" target="_blank" >*</a>(1983) by Jean-Luc Godard.
+		</br>(a) Beethoven’s <i>Moonlight Sonata</i>. (b) I imagined Snape holding a magic wand. (c) Spring came, the blooming daffodils are like choirs singing songs. (d) I used my phone camera to record the waves in <i>Prénom Carmen</i><a href="PrénomCarmen.html" class="one" target="_blank" >*</a>(1983) by Jean-Luc Godard.</p>
 
-		</p>
 
-	 	<br/>
+		<p style="left:20px;"></br></br>&nbsp;&nbsp;*</br>&nbsp;&nbsp;*</br>&nbsp;&nbsp;*</br>&nbsp;&nbsp;*</br>&nbsp;&nbsp;*</br></p>
+		</br>
 
+				<div class="slideshow-container">
+				 <div class="mySlides13">
+					<img src="img/drawing-img/433.png" style="width:40%">
+					<div class="numbertext">1 / 12 </div>
+				 </div>
+
+				 <div class="mySlides13">
+					<img src="img/drawing-img/drawing-tao-1.png" style="width:50%">
+					<div class="numbertext">2 / 12 </div>
+				 </div>
+
+				 <div class="mySlides13">
+					<img src="img/drawing-img/drawing-tao-2.png" style="width:50%">
+					<div class="numbertext">3 / 12 </div>
+				 </div>
+
+				 <div class="mySlides13">
+					<img src="img/drawing-img/drawing-tao-5.png" style="width:100%">
+					<div class="numbertext">4 / 12 </div>
+				 </div>
+
+				 <div class="mySlides13">
+					<img src="img/drawing-img/drawing-tao-6.png" style="width:100%">
+					<div class="numbertext">5 / 12 </div>
+				 </div>
+
+				 <div class="mySlides13">
+					<img src="img/drawing-img/drawing-tao-4.png" style="width:100%">
+					<div class="numbertext">6 / 12 </div>
+				 </div>
+
+				 <div class="mySlides13">
+					<img src="img/drawing-img/drawing-tao-8.png" style="width:50%">
+					<div class="numbertext">7 / 12 </div>
+				 </div>
+
+				 <div class="mySlides13">
+				  <img src="img/drawing-img/drawing-tao-9.png" style="width:100%">
+				  <div class="numbertext">8 / 12 </div>
+				 </div>
+
+				 <div class="mySlides13">
+					<img src="img/drawing-img/drawing-tao-13.png" style="width:50%">
+					<div class="numbertext">9 / 12 </div>
+				 </div>
+
+				 <div class="mySlides13">
+				 <img src="img/drawing-img/drawing-tao-12.png" style="width:50%">
+				 <div class="numbertext">10 / 12 </div>
+				</div>
+
+				<div class="mySlides13">
+				<img src="img/drawing-img/drawing-tao-12-2.png" style="width:50%">
+				<div class="numbertext">11 / 12 </div>
+			 </div>
+
+			 <div class="mySlides13">
+			 <img src="img/drawing-img/drawing-tao-11.png" style="width:100%">
+			 <div class="numbertext">12 / 12 </div>
+			</div>
+
+				 <div class="b-13">
+				 <a class="prev" onclick="plusSlides(-1, 12)">&#10094;</a>
+				 <a class="next" onclick="plusSlides(1, 12)">&#10095;</a>
+				 </div>
+				</div>
+
+				 <p class="text">
+		      <i>The Door to the Hidden</i>, book, 20.32 × 26.67 cm, March, 2020. <a href="img/drawing-img/drawing-tao.pdf" class="one" target="_blank" >Download PDF</a>
+				 </br>“The Tao that can be spoken of is not the eternal Tao.
+				 The name that can be named is not the eternal name. The nameless is the beginning of heaven and earth. The name is the mother of the ten thousand things. Send your desires away and you will see the mystery. Be filled with desire and you will see only the manifestation. As these two come forth they differ in name. Yet at their source they are the same. This source is called a mystery. Darkness within darkness, the gateway to all mystery.” (The first chapter of <i>Tao Te Ching</i>)
+				 </p>
+
+
+
+
+				 				<div class="slideshow-container">
+				 				 <div class="mySlides14">
+				 					<img src="img/drawing-img/small/Scan 45.jpg" style="width:60%">
+				 					<div class="numbertext">1 / 10 </div>
+				 				 </div>
+
+				 				 <div class="mySlides14">
+				 					<img src="img/drawing-img/small/Scan 46.jpg" style="width:57%">
+				 					<div class="numbertext">2 / 10 </div>
+				 				 </div>
+
+				 				 <div class="mySlides14">
+				 					<img src="img/drawing-img/small/Scan 54.jpg" style="width:50%">
+				 					<div class="numbertext">3 / 10 </div>
+				 				 </div>
+
+								 <div class="mySlides14">
+				 					<img src="img/drawing-img/small/Scan 66.jpg" style="width:50%">
+				 					<div class="numbertext">4 / 10 </div>
+				 				 </div>
+
+								 <div class="mySlides14">
+				 					<img src="img/drawing-img/small/Scan 63.jpg" style="width:50%">
+				 					<div class="numbertext">5 / 10 </div>
+				 				 </div>
+
+								 <div class="mySlides14">
+									<img src="img/drawing-img/small/Scan 65.jpg" style="width:50%">
+									<div class="numbertext">6 / 10 </div>
+								 </div>
+
+								 <div class="mySlides14">
+									<img src="img/drawing-img/small/Scan 37.jpg" style="width:55%">
+									<div class="numbertext">7 / 10 </div>
+								 </div>
+
+								 <div class="mySlides14">
+									<img src="img/drawing-img/small/Scan 36.jpg" style="width:55%">
+									<div class="numbertext">8 / 10 </div>
+								 </div>
+
+								 <div class="mySlides14">
+									<img src="img/drawing-img/small/Scan 68.jpg" style="width:50%">
+									<div class="numbertext">9 / 10 </div>
+								 </div>
+
+								 <div class="mySlides14">
+								 <img src="img/drawing-img/small/Scan 68-2.jpg" style="width:50%">
+								 <div class="numbertext">10 / 10 </div>
+								</div>
+
+
+
+				 				 <div class="b-14">
+				 				 <a class="prev" onclick="plusSlides(-1, 13)">&#10094;</a>
+				 				 <a class="next" onclick="plusSlides(1, 13)">&#10095;</a>
+				 				 </div>
+				 				</div>
+
+				 	<p class="text">Leftovers:&nbsp; <div class="hover-a">a<img src="img/drawing-img/small/Scan 41 copy.png" class="aa"></div>,
+
+						<div class="hover-b">b<img src="img/drawing-img/small/Scan 6-1.png" class="bb"></div>,
+
+						<div class="hover-c">c<img src="img/drawing-img/small/Scan 38.jpg" class="cc"></div>,
+
+						<div class="hover-d">d<img src="img/drawing-img/small/Scan 66.png" class="dd"></div>,
+
+							<div class="hover-e">e<img src="img/drawing-img/small/Scan 5.png" class="ee"></div>,
+
+							<div class="hover-f">f<img src="img/drawing-img/small/Untitl-ed-7 copy.png" class="ff"></div>,
+
+							<div class="hover-g">g<img src="img/drawing-img/small/Scan 71-1.png" class="gg"></div>,
+
+							<div class="hover-g">h<img src="img/drawing-img/small/Scan 71-2.png" class="gg"></div>,
+
+								<div class="hover-g">i<img src="img/drawing-img/small/Scan 71-3.png" class="gg"></div>,
+
+									<div class="hover-g">j<img src="img/drawing-img/small/Scan 71-1.png" class="gg"></div>,
+
+										<div class="hover-k">k<img src="img/drawing-img/small/Scan 44.jpg" class="kk"></div>,
+
+										<div class="hover-l">l<img src="img/drawing-img/small/Scan 57.png" class="ll"></div>,
+
+											<div class="hover-m">m<img src="img/drawing-img/small/Scan 65.png" class="mm"></div>,
+
+											<div class="hover-n">n<img src="img/drawing-img/small/Untitlexiaod-8.png" class="nn"></div>,
+
+											<div class="hover-o">o<img src="img/drawing-img/small/Scan 69.png" class="oo"></div>,
+
+											<div class="hover-p">p<img src="img/drawing-img/small/Untitled-1.png" class="pp"></div>,
+
+												<div class="hover-q">q<img src="img/drawing-img/small/Scan 55.png" class="qq"></div>,
+
+													<div class="hover-r">r<img src="img/drawing-img/small/Scan 47.png" class="rr"></div>,
+
+														<div class="hover-s">s<img src="img/drawing-img/small/Scan 69-2.png" class="ss"></div>,
+
+														<div class="hover-s">t<img src="img/drawing-img/small/Scan 48.png" class="ss"></div>,
+
+													<div class="hover-s">u<img src="img/drawing-img/small/Scan 59.png" class="ss"></div>,
+
+														<div class="hover-v">v<img src="img/drawing-img/small/Scan 61.png" class="vv"></div>,
+
+														<div class="hover-w">w<img src="img/drawing-img/small/Scan 51.png" class="ww"></div>,
+
+														<div class="hover-x">x<img src="img/drawing-img/small/Scan 50.png" class="xx"></div>,
+
+														<div class="hover-y">y<img src="img/drawing-img/small/Scan 42.png" class="yy"></div>,
+
+															<div class="hover-z">z<img src="img/drawing-img/small/Scan 39.jpg" class="zz"></div>.
+
+																...<div class="hover-play">&#9829;<img src="img/drawing-img/small/IMG_9746.gif" class="play"></div>
+
+
+
+
+
+
+					</p>
 
 
 
@@ -431,8 +626,8 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 
 
 	<script>
-var slideIndex = [1,1,1,1,1,1,1,1,1,1,1,1];
-var slideId = ["mySlides1", "mySlides2", "mySlides3", "mySlides4", "mySlides5","mySlides6","mySlides7","mySlides8","mySlides9","mySlides10","mySlides11","mySlides12"]
+var slideIndex = [1,1,1,1,1,1,1,1,1,1,1,1,1,1];
+var slideId = ["mySlides1", "mySlides2", "mySlides3", "mySlides4", "mySlides5","mySlides6","mySlides7","mySlides8","mySlides9","mySlides10","mySlides11","mySlides12","mySlides13","mySlides14"]
 showSlides(1, 0);
 showSlides(1, 1);
 showSlides(1, 2);
@@ -445,6 +640,9 @@ showSlides(1, 8);
 showSlides(1, 9);
 showSlides(1, 10);
 showSlides(1, 11);
+showSlides(1, 12);
+showSlides(1, 13);
+
 
 
 
