--- a/gleaners.html
+++ b/gleaners.html
@@ -56,14 +56,14 @@ body{
 he told me a story behind the film:
 </br>
 </br>
-<img src="img/shot-0.png" class="shot">
+<img src="img/shot-0.jpg" class="shot">
 </br>
 </br>
 </br>
 &nbsp;&nbsp;&nbsp;Then I rewatched it to find Varda and Marker...
 </br></br>
 </br>
-<img src="img/shot-1.png" class="shot">
+<img src="img/shot-1.jpg" class="shot">
 </br>
 </br>
 &nbsp;&nbsp;&nbsp; The moment makes the film more beautiful to me.
