--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
 
 	 </p>
 
+<!-- web -->
+
+
+
 
 
 		<div class="slideshow-container">
@@ -367,10 +371,79 @@ When I went to the pump house for the first time, the leaves by the window<a hre
    </p>
 
 
+	 <div class="slideshow-container">
+		<div class="mySlides15">
+			<img src="img/web-1.png" style="width:92%">
+			<div class="numbertext">1 / 11</div>
+		</div>
+
+		<div class="mySlides15">
+			<img src="img/web-12.png" style="width:92%">
+			<div class="numbertext">2 / 11</div>
+		</div>
+
+		<div class="mySlides15">
+			<img src="img/web-13.png" style="width:92%">
+			<div class="numbertext">3 / 11</div>
+		</div>
+
+		<div class="mySlides15">
+			<img src="img/web-14.png" style="width:92%">
+			<div class="numbertext">4 / 11</div>
+		</div>
+
+		<div class="mySlides15">
+			<img src="img/web-15.png" style="width:92%">
+			<div class="numbertext">5 / 11</div>
+		</div>
+
+		<div class="mySlides15">
+			<img src="img/web-16.png" style="width:92%">
+			<div class="numbertext">6 / 11</div>
+		</div>
+
+		<div class="mySlides15">
+			<img src="img/web-17.png" style="width:92%">
+			<div class="numbertext">7 / 11</div>
+		</div>
+
+		<div class="mySlides15">
+			<img src="img/web-18.png" style="width:92%">
+			<div class="numbertext">8 / 11</div>
+		</div>
+
+		<div class="mySlides15">
+			<img src="img/web-19.png" style="width:92%">
+			<div class="numbertext">9 / 11</div>
+		</div>
+
+		<div class="mySlides15">
+			<img src="img/web-20.png" style="width:92%">
+			<div class="numbertext">10 / 11</div>
+		</div>
+
+		<div class="mySlides15">
+			<img src="img/web-21.png" style="width:92%">
+			<div class="numbertext">11 / 11</div>
+		</div>
+
+		<div class="b-15">
+		<a class="prev" onclick="plusSlides(-1, 14)">&#10094;</a>
+		<a class="next" onclick="plusSlides(1, 14)">&#10095;</a>
+		</div>
+
+	 </div>
+
+	 <p class="text"><i>Journey to the Loss</i><a href="bird.html" class="one" target="_blank" >*</a>, <a href="https://lihuayu.xyz/journeytothelost/" target="_blank">a si-fi story</a>, April, 2020.
+	 </br>
+	 I can’t remember how many times of rewatching <i>Blade Runner</i> (1982). Every time I would fall into Rachel’s eye<a href="eye.html" class="one" target="_blank" >*</a> and the soundtrack in the film would lead me to so many memories. “All those moments will be lost in time, like tears in rain...” The journey usually means to seek for something. However, many times, we thought we had reached the point, but didn't know that we just returned to the origin —— a circle.
+	 </p>
+
+
 
 	 <div class="slideshow-container">
 	 	<div class="mySlides3">
-	 		<img src="img/duck.jpg" style="width:95%">
+	 		<img src="img/duck.jpg" style="width:90%">
 	 		<div class="numbertext">1 / 1</div>
 	 	</div>
 
@@ -383,7 +456,10 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 	 <br/>This is a friendship website for Qinqin. One day she sent me a photo of three ducks on her way to school, I really like it and decided to use this for the idea of the website. Qinqin and I have been best friends since the first year of high school. She’s now studying Bioinformatics in The University of Edinburgh in Scotland. It’s very interesting that we both live in a place called Richmond<a href="richmond.html" class="one" target="_blank" >*</a>, even though in different countries.
  </p>
 
+
 	 <br/>
+
+
 
 	 <div class="slideshow-container">
 	 	<div class="mySlides12">
@@ -624,8 +700,8 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 
 
 	<script>
-var slideIndex = [1,1,1,1,1,1,1,1,1,1,1,1,1,1];
-var slideId = ["mySlides1", "mySlides2", "mySlides3", "mySlides4", "mySlides5","mySlides6","mySlides7","mySlides8","mySlides9","mySlides10","mySlides11","mySlides12","mySlides13","mySlides14"]
+var slideIndex = [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1];
+var slideId = ["mySlides1", "mySlides2", "mySlides3", "mySlides4", "mySlides5","mySlides6","mySlides7","mySlides8","mySlides9","mySlides10","mySlides11","mySlides12","mySlides13","mySlides14","mySlides15"]
 showSlides(1, 0);
 showSlides(1, 1);
 showSlides(1, 2);
@@ -640,6 +716,7 @@ showSlides(1, 10);
 showSlides(1, 11);
 showSlides(1, 12);
 showSlides(1, 13);
+showSlides(1, 14);
 
 
 
