--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 
 	 </div>
 
-	 <p class="text"><i>Journey to the Loss</i><a href="bird.html" class="one" target="_blank" >*</a>, <a href="https://lihuayu.xyz/journeytothelost/" target="_blank">a si-fi story</a>, April, 2020.
+	 <p class="text"><i>Journey to the Loss</i>, <a href="https://lihuayu.xyz/journeytothelost/" target="_blank">a si-fi story</a>, April, 2020.
 	 </br>
 	 I can’t remember how many times of rewatching <i>Blade Runner</i> (1982). Every time I would fall into Rachel’s eye<a href="eye.html" class="one" target="_blank" >*</a> and the soundtrack in the film would lead me to so many memories. “All those moments will be lost in time, like tears in rain...” The journey usually means to seek for something. However, many times, we thought we had reached the point, but didn't know that we just returned to the origin —— a <i>circle</i>.
 	 </p>
