--- a/index.html
+++ b/index.html
@@ -573,8 +573,50 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 				 The name that can be named is not the eternal name. The nameless is the beginning of heaven and earth. The name is the mother of the ten thousand things. Send your desires away and you will see the mystery. Be filled with desire and you will see only the manifestation. As these two come forth they differ in name. Yet at their source they are the same. This source is called a mystery. Darkness within darkness, the gateway to all mystery.” (The first chapter of <i>Tao Te Ching</i>)
 				 </p>
 
+				 <div class="slideshow-container">
+					<div class="mySlides16">
+						<img src="img/bags/1.jpg" style="width:50%">
+						<div class="numbertext">1 / 7</div>
+					</div>
 
+					<div class="mySlides16">
+						<img src="img/bags/2.jpg" style="width:50%">
+						<div class="numbertext">2 / 7</div>
+					</div>
 
+					<div class="mySlides16">
+						<img src="img/bags/3.jpg" style="width:50%">
+						<div class="numbertext">3 / 7</div>
+					</div>
+
+					<div class="mySlides16">
+						<img src="img/bags/4.jpg" style="width:50%">
+						<div class="numbertext">4 / 7</div>
+					</div>
+
+					<div class="mySlides16">
+						<img src="img/bags/5.jpg" style="width:50%">
+						<div class="numbertext">5 / 7</div>
+					</div>
+
+					<div class="mySlides16">
+						<img src="img/bags/6.jpg" style="width:50%">
+						<div class="numbertext">6 / 7</div>
+					</div>
+
+					<div class="mySlides16">
+						<img src="img/bags/7.jpg" style="width:50%">
+						<div class="numbertext">7 / 7</div>
+					</div>
+
+				 <div class="b-16">
+					<a class="prev" onclick="plusSlides(-1, 15)">&#10094;</a>
+					<a class="next" onclick="plusSlides(1, 15)">&#10095;</a>
+				</div>
+				 </div>
+				 <p class="text">Bags, trash materials, dimension variable,  2019—2020.
+
+				</p>
 
 				 				<div class="slideshow-container">
 				 				 <div class="mySlides14">
@@ -635,6 +677,9 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 				 				 </div>
 				 				</div>
 
+
+
+
 				 	<p class="text">Leftovers:&nbsp; <div class="hover-a">a<img src="img/drawing-img/small/Scan 41 copy.png" class="aa"></div>,
 
 						<div class="hover-b">b<img src="img/drawing-img/small/Scan 6-1.png" class="bb"></div>,
@@ -689,9 +734,6 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 
 																...<div class="hover-play">&#9829;<img src="img/drawing-img/small/IMG_9746.gif" class="play"></div>
 
-
-
-
 					</p>
 
 
@@ -700,8 +742,8 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 
 
 	<script>
-var slideIndex = [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1];
-var slideId = ["mySlides1", "mySlides2", "mySlides3", "mySlides4", "mySlides5","mySlides6","mySlides7","mySlides8","mySlides9","mySlides10","mySlides11","mySlides12","mySlides13","mySlides14","mySlides15"]
+var slideIndex = [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1];
+var slideId = ["mySlides1", "mySlides2", "mySlides3", "mySlides4", "mySlides5","mySlides6","mySlides7","mySlides8","mySlides9","mySlides10","mySlides11","mySlides12","mySlides13","mySlides14","mySlides15","mySlides16"]
 showSlides(1, 0);
 showSlides(1, 1);
 showSlides(1, 2);
@@ -717,6 +759,7 @@ showSlides(1, 11);
 showSlides(1, 12);
 showSlides(1, 13);
 showSlides(1, 14);
+showSlides(1, 15);
 
 
 
