--- a/index.html
+++ b/index.html
@@ -575,37 +575,37 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 
 				 <div class="slideshow-container">
 					<div class="mySlides16">
-						<img src="img/bags/1.jpg" style="width:50%">
+						<img src="img/bags/1.jpg" style="width:55%">
 						<div class="numbertext">1 / 7</div>
 					</div>
 
 					<div class="mySlides16">
-						<img src="img/bags/2.jpg" style="width:50%">
+						<img src="img/bags/2.jpg" style="width:55%">
 						<div class="numbertext">2 / 7</div>
 					</div>
 
 					<div class="mySlides16">
-						<img src="img/bags/3.jpg" style="width:50%">
+						<img src="img/bags/3.jpg" style="width:55%">
 						<div class="numbertext">3 / 7</div>
 					</div>
 
 					<div class="mySlides16">
-						<img src="img/bags/4.jpg" style="width:50%">
+						<img src="img/bags/4.jpg" style="width:55%">
 						<div class="numbertext">4 / 7</div>
 					</div>
 
 					<div class="mySlides16">
-						<img src="img/bags/5.jpg" style="width:50%">
+						<img src="img/bags/5.jpg" style="width:55%">
 						<div class="numbertext">5 / 7</div>
 					</div>
 
 					<div class="mySlides16">
-						<img src="img/bags/6.jpg" style="width:50%">
+						<img src="img/bags/6.jpg" style="width:55%">
 						<div class="numbertext">6 / 7</div>
 					</div>
 
 					<div class="mySlides16">
-						<img src="img/bags/7.jpg" style="width:50%">
+						<img src="img/bags/7.jpg" style="width:55%">
 						<div class="numbertext">7 / 7</div>
 					</div>
 
@@ -614,7 +614,7 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 					<a class="next" onclick="plusSlides(1, 15)">&#10095;</a>
 				</div>
 				 </div>
-				 <p class="text">Bags, trash materials, dimension variable,  2019—2020.
+				 <p class="text">Handmade Bags, trash materials, dimension variable,  2019—2020.
 
 				</p>
 
