--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ When I went to the pump house for the first time, the leaves by the window<a hre
  </br>
 	 Sometimes I meet a new image, staring at it for a long time. Then after getting to know its sroty, I feel even more connected.
  </br>Sometimes I am not sure if the source<a href="https://lihuayu.xyz/journeytothelost/source.html" class="one" target="_blank" >*</a> of pictures should be provided. I care it too much. Sometimes I think only I know it’s enough.
-</br>Sometimes I feel if people can’t get it, then it’s better to be hidden, otherwise it’s such a waste.
+</br>Sometimes I feel if people can’t get it, then it’s better to be hidden, otherwise it would be such a waste.
 	 </p>
 
 
