--- a/index.html
+++ b/index.html
@@ -436,9 +436,9 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 
 	 <p class="text"><i>Journey to the Loss</i>, <a href="https://lihuayu.xyz/journeytothelost/" target="_blank">a si-fi story</a>, April, 2020.
 	 </br>
-	 I can’t remember how many times of rewatching <i>Blade Runner</i> (1982). Every time I would fall into Rachel’s eye<a href="eye.html" class="one" target="_blank" >*</a> and the soundtrack in the film would lead me to so many memories. “All those moments will be lost in time, like tears in rain...” The journey usually means to seek for something. However, many times, we thought we had reached the point, but didn’t know that it’s just returning to the origin —— a <i>circle</i>.
+	 (a) I can’t remember how many times of rewatching <i>Blade Runner</i> (1982). Every time I would fall into Rachel’s eye<a href="eye.html" class="one" target="_blank" >*</a> and the soundtrack in the film would lead me to so many memories. “All those moments will be lost in time, like tears in rain...” The journey usually means to seek for something. However, many times, we thought we had reached the point, but didn’t know that it’s just returning to the origin —— a <i>circle</i>.
  </br>
-	 Sometimes I meet a new image, staring at it for a long time. Then after getting to know its sroty, I feel even more connected.
+	 (b) Sometimes I meet a new image, staring at it for a long time. Then after getting to know its sroty, I feel even more connected.
  </br>Sometimes I am not sure if the source<a href="https://lihuayu.xyz/journeytothelost/source.html" class="one" target="_blank" >*</a> of pictures should be provided. I care it too much. Sometimes I think only I know it’s enough.
 </br>Sometimes I feel if people can’t get it, then it’s better to be hidden, otherwise it would be such a waste.
 	 </p>
