--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ When I went to the pump house for the first time, the leaves by the window<a hre
 	 </br>
 	 (a) I can’t remember how many times of rewatching <i>Blade Runner</i> (1982). Every time I would fall into Rachel’s eye<a href="eye.html" class="one" target="_blank" >*</a> and the soundtrack in the film would lead me to so many memories. “All those moments will be lost in time, like tears in rain...” The journey usually means to seek for something. However, many times, we thought we had reached the point, but didn’t know that it’s just returning to the origin —— a <i>circle</i>.
  </br>
-	 (b) Sometimes I meet a new image, staring at it for a long time. Then after getting to know its sroty, I feel even more connected; Sometimes I am not sure if the source<a href="https://lihuayu.xyz/journeytothelost/source.html" class="one" target="_blank" >*</a> of pictures should be provided. I care it too much. Sometimes I think only I know it’s enough; Sometimes I feel if people can’t get it, then it’s better to be hidden, otherwise it would be such a waste.
+	 (b) Sometimes I meet a new image, staring at it for a long time. Then after getting to know its story, I feel even more connected; Sometimes I am not sure if the source<a href="https://lihuayu.xyz/journeytothelost/source.html" class="one" target="_blank" >*</a> of pictures should be provided, even though I care it too much; Sometimes I feel if people can’t get it, then it’s better to be hidden, otherwise it would be such a waste.
 	 </p>
 
 
